--- a/static/css/admin_admin_manager.css
+++ b/static/css/admin_admin_manager.css
@@ -3,6 +3,11 @@
     margin-bottom: 26px;
 }
 
+#admin-data-table input {
+    border: none;
+    background: none;
+}
+
 table {
     display: flex;
     flex-flow: column;
